# cmcp

./: .gitignore  404.html  ADOPTERS.md  CHANGELOG.md  CHARTER.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  LIMITATIONS.md  MAINTAINERS.md  NOTICE  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md  STATUS.md  audit.db  docker-compose.yml  index.html  index.md  llms-full.txt  llms.txt  mkdocs.yml  objects.inv  pyproject.toml  requirements-docs.txt  robots.txt  sitemap.xml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  docker.yml  docs.yml  publish.yml  release-drafter.yml  release.yml  sbom.yml  scorecard.yml
CHANGELOG/: index.html
CONTRIBUTING/: index.html
GOVERNANCE/: index.html
LIMITATIONS/: index.html
ROADMAP/: index.html
SPEC/: index.html  index.md
benchmarks/: .gitkeep
concepts/: index.html  index.md
configuration/: index.html  index.md
docs/: CNAME  README.md  SPEC.md  concepts.md  configuration.md  index.html  quickstart.md
docs/SPEC/: index.html  index.md
docs/concepts/: index.html  index.md
docs/configuration/: index.html  index.md
docs/gtm/: launch-checklist.md  regulated-buyer-playbook.md
docs/partners/: design-partner-template.md
docs/quickstart/: index.html  index.md
docs/research/: qualifying-question-validation.md  rq1-interview-guide.md  rq4-interview-guide.md  rq6-interview-guide.md
docs/spec/: attestation.md  call-graph.md  cedar-policy.md  component-model.md  embodied-action-evidence.md  error-codes.md  failure-modes.md  mcp-spec-strategy.md  phase2-server.md  proxy-security.md  response-inspection.md  session-policy.md  threat-model.md  tool-identity.md  transport.md  verification-library.md
docs/spec/attestation/: index.html  index.md
docs/spec/call-graph/: index.html
docs/spec/cedar-policy/: index.html
docs/spec/component-model/: index.html
docs/spec/error-codes/: index.html
docs/spec/failure-modes/: index.html
docs/spec/threat-model/: index.md  (+1 more)
docs/testing/: benchmarks.md  soak-test.md
docs/tutorials/: advisory-mode-debugging.md  cedar-policy-walkthrough.md  connecting-agent-frameworks.md  deploy-azure.md  deploy-gcp.md  kill-switch.md  multi-tenant-config.md  response-inspection.md  tee-attestation.md  tls-pinning.md  tool-catalog-authoring.md  verifying-a-trace-claim.md
examples/bfsi-demo/: README.md  catalog.json  cmcp-config.yaml
examples/minimal/: catalog.json  cmcp-config.yaml
experiments/: README.md
experiments/claim-hw-attestation/: README.md  run.py
experiments/claim1-policy-hash-binding/: README.md  run.py
experiments/claim2-false-positive-rate/: README.md  run.py
experiments/claim2-session-vs-call-policy/: README.md  run.py
experiments/claim3-rug-pull-detection/: README.md  run.py
experiments/claim4-trace-claim-nonce/: README.md  run.py
experiments/claim5-temporal-adjacency/: README.md  run.py
experiments/claim6-cross-org-attestation/: README.md  run.py
governance/: cmcp-enforcement.yaml
overrides/: main.html
quickstart/: index.html  index.md
schemas/: audit-entry.schema.json  catalog-entry.schema.json  cedar-schema.cedarschema  trace-claim.schema.json
scripts/: deploy-azure.sh  deploy-gcp.sh  gen_agt_evidence.py  mock_upstream.py  verify_agt_evidence.py
search/: search_index.json
spec/attestation/: index.html  index.md
spec/call-graph/: index.html
spec/cedar-policy/: index.html  index.md
spec/component-model/: index.html
spec/embodied-action-evidence/: index.html  index.md
spec/error-codes/: index.html
spec/failure-modes/: index.html
spec/phase2-server/: index.html
spec/proxy-security/: index.html
spec/response-inspection/: index.html
spec/session-policy/: index.html
spec/threat-model/: index.html  index.md
spec/tool-identity/: index.html
spec/transport/: index.html
spec/verification-library/: index.html  index.md
src/cmcp_gateway/: __init__.py  benchmarks.py  cli.py  config.py  errors.py  startup.py
src/cmcp_runtime/: __init__.py  agent_manifest.py  benchmarks.py  cli.py  config.py  errors.py  kill_switch.py  startup.py
src/cmcp_verify/: __init__.py  azure_cvm.py  embodied_action.py  opaque.py  sev_snp.py  tdx.py  tpm.py  verify.py
testing/benchmarks/: index.html
testing/soak-test/: index.html
tests/conformance/: README.md  conftest.py  test_audit_conformance.py  test_gateway_conformance.py
tests/soak/: reference_server.py  run_soak.py
tests/unit/: conftest.py  test_agent_manifest.py  test_agt_evidence.py  test_audit.py  test_audit_chain_anchor.py  test_audit_sqlite.py  test_azure_cvm_verify.py  test_benchmarks.py  test_break_glass.py  test_call_log.py  test_call_log_integration.py  test_catalog.py  test_catalog_scanner.py  test_claim1_hash_binding.py  test_claim2_session_gap.py  test_claim3_rug_pull_detection.py  test_claim4_trace_claim_nonce.py  test_claim5_temporal_adjacency.py  test_claim6_cross_org_attestation.py  test_cli_wiring.py  test_config.py  test_egress_policy.py  test_embodied_action_evidence.py  test_inspection.py  test_kill_switch.py  test_low_batch_186_187_191_194.py  test_mcp_proxy.py  test_mcp_server_auth.py  test_mid_session_failure.py  test_nras_client.py  test_policy_advice.py  test_policy_bundle.py  test_policy_evaluator.py  test_resource_scoped_policy.py  test_session.py  test_session_call_log.py  test_session_close.py  test_session_manager.py  test_session_reset.py  test_sev_snp_verify.py  (+19 more)
tutorials/advisory-mode-debugging/: index.html
tutorials/cedar-policy-walkthrough/: index.html  index.md
tutorials/connecting-agent-frameworks/: index.html  index.md
tutorials/deploy-azure/: index.html
tutorials/deploy-gcp/: index.html
tutorials/kill-switch/: index.html
tutorials/multi-tenant-config/: index.html
tutorials/response-inspection/: index.html
tutorials/tee-attestation/: index.html  index.md
tutorials/tls-pinning/: index.html
tutorials/tool-catalog-authoring/: index.html
tutorials/verifying-a-trace-claim/: index.html  index.md
(+97 files in other folders)
