[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cmcp-gateway"
version = "0.1.0"
description = "Hardware-attested MCP gateway — TEE-enforced policy and TRACE Claim generation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42.0",
    "pyyaml>=6.0",
    "jsonschema>=4.20",
    "httpx>=0.27",
    "anyio>=4.0",
    "starlette>=0.37",
    "uvicorn>=0.29",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-pyyaml",
]

[project.scripts]
cmcp = "cmcp_gateway.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cmcp_gateway"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "PIE", "T20", "RET", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/cmcp_gateway"]
