[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cmcp-gateway"
version = "0.1.0"
description = "Hardware-attested MCP gateway — TEE-enforced policy and TRACE Claim generation"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "AgentTrust Contributors", email = "oss@agentrust.io" },
]
keywords = ["mcp", "tee", "attestation", "security", "ai-agents", "cedar"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    "agentrust-trace>=0.1",
    "cryptography>=42.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "anyio>=4.0",
    "starlette>=0.37",
    "uvicorn>=0.29",
    "click>=8.1",
    "agent-os-kernel>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-pyyaml",
    "bandit[toml]>=1.7",
    "pip-audit>=2.6",
]

[project.scripts]
cmcp = "cmcp_gateway.cli:main"

[project.urls]
Homepage = "https://github.com/agentrust-io/cmcp"
Repository = "https://github.com/agentrust-io/cmcp"
Documentation = "https://github.com/agentrust-io/cmcp#readme"
"Bug Tracker" = "https://github.com/agentrust-io/cmcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cmcp_gateway", "src/cmcp_verify"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "PIE", "T20", "RET", "SIM"]
ignore = ["E501"]

[tool.bandit]
skips = ["B101"]

[tool.coverage.run]
source = ["src"]
omit = ["*/cli.py"]

[tool.coverage.report]
fail_under = 70

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_return_any = false
files = ["src/cmcp_gateway", "src/cmcp_verify"]

[[tool.mypy.overrides]]
module = ["cmcp_gateway.tee.sev_snp", "cmcp_gateway.tee.tdx"]
warn_unused_ignores = false
