[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cmcp-runtime"
version = "0.2.1"
description = "Hardware-attested MCP runtime — TEE-enforced policy and TRACE Claim generation"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "AgentTrust Contributors", email = "oss@agentrust.io" },
]
keywords = ["mcp", "tee", "attestation", "security", "ai-agents", "cedar"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    "agentrust-trace>=0.1",
    "agent-manifest>=0.1.1",
    "cryptography>=42.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "anyio>=4.0",
    "starlette>=0.37",
    "uvicorn>=0.29",
    "click>=8.1",
    "agent-governance-toolkit-core>=4.0",
    "cedarpy>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-pyyaml",
    "bandit[toml]>=1.7",
    "pip-audit>=2.6",
]

[project.scripts]
cmcp = "cmcp_runtime.cli:main"

[project.urls]
Homepage = "https://github.com/agentrust-io/cmcp"
Repository = "https://github.com/agentrust-io/cmcp"
Documentation = "https://github.com/agentrust-io/cmcp/tree/main/docs"
"Bug Tracker" = "https://github.com/agentrust-io/cmcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cmcp_runtime", "src/cmcp_verify"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
pythonpath = ["src"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "PIE", "T20", "RET", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/cmcp_runtime/benchmarks.py" = ["T201"]
"tests/soak/run_soak.py" = ["T201", "B007"]

[tool.bandit]
skips = ["B101"]

[tool.coverage.run]
source = ["src"]
omit = ["*/cli.py"]

[tool.coverage.report]
fail_under = 70

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_return_any = false
files = ["src/cmcp_runtime", "src/cmcp_verify"]

[[tool.mypy.overrides]]
module = ["cmcp_runtime.tee.sev_snp", "cmcp_runtime.tee.tdx", "cmcp_runtime.tee.spiffe"]
warn_unused_ignores = false
